# bgclipper

./: Cargo.toml  LICENSE  README-ja.md  README.md
.github/instructions/: general.instructions.md
docs/: CODE_REVIEW_CHECKLIST.md  PROJECT_STRUCTURE.md  SECURITY.md  TEST.md
logo/: logo.drawio  tray_icon.drawio
src/: main.rs
src/application/: clipboard_service.rs  mod.rs
src/domain/: color.rs  image_processor.rs  mod.rs  port.rs
src/infrastructure/: clipboard.rs  config.rs  mod.rs
src/presentation/: tray.rs
tests/: clipboard_roundtrip_test.rs  logo_transparency_test.rs
